<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.libertsolutions.washington.apppropagandista.Controller.UsuarioActivity">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/txtNome" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/txtNome"
            android:hint="@string/txtNome"
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName"
            android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/txtCpf" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/txtCpf"
            android:hint="@string/txtCpf"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/txtEmail" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/txtEmail"
            android:hint="@string/txtEmail"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/txtSenha" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/txtSenha"
            android:hint="@string/txtSenha"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/btnSalvar"
        android:text="@string/btnSalvar" />
</LinearLayout>
