<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.libertsolutions.washington.apppropagandista.Controller.Medico_Cadastrar">

    <!-- Layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtNome" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/txtNome"
                    android:hint="@string/txtNome"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtDtAniversario" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/txtDtAniversario"
                    android:hint="@string/txtDtAniversario"
                    android:imeOptions="actionUnspecified"
                    android:inputType="date"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtSecretaria" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/txtSecretaria"
                    android:hint="@string/txtSecretaria"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtTelefone" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/txtTelefone"
                    android:hint="@string/txtTelefone"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

               <EditText android:id="@+id/txtEmail" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/txtEmail"
                    android:hint="@string/txtEmail"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtCrm" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/txtCrm"
                    android:hint="@string/txtCrm"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtEspecialidade" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/txtEspecialidade"
                    android:hint="@string/txtEspecialidade"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textAutoComplete"
                    android:maxLines="1" android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Rodapé -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

            <Button android:id="@+id/btnSalvar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@mipmap/ic_salvar"
                android:text="Salvar"
                android:layout_alignParentBottom="true" />
    </RelativeLayout>
</RelativeLayout>