<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_cadastro_compromisso"
    tools:context="com.libertsolutions.washington.apppropagandista.Controller.CadastroCompromissoActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintMedico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <AutoCompleteTextView
                android:id="@+id/txtMedico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:hint="@string/hintTxtMedico"
                >

                <requestFocus />
            </AutoCompleteTextView>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintDataCompromisso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hintMedico"
            >

            <EditText
                android:id="@+id/txtDataCompromisso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:singleLine="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:cursorVisible="false"
                android:hint="@string/hintTxtDataCompromisso"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintHorarioCompromisso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hintDataCompromisso"
            >

            <EditText
                android:id="@+id/txtHorarioCompromisso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:singleLine="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:cursorVisible="false"
                android:hint="@string/hintTxtHorárioCompromisso"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hintObservacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hintHorarioCompromisso"
            >

            <EditText
                android:id="@+id/txtObservacao"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine|textCapSentences"
                android:imeOptions="actionDone"
                android:gravity="top"
                android:hint="@string/txtObservacao"
                />

        </android.support.design.widget.TextInputLayout>

        <!--
        <Button
            android:id="@id/btnSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hintObservacao"
            android:layout_alignParentBottom="true"
            android:text="@string/btnSalvar"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_selector"
            />
            -->
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>